--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">BeyondBarriersMart</string>
+    <string name="homepage_title">Home Page</string>
+    <string name="search_bar">Search for an item</string>
+    <string name="category_page_name">Category</string>
+    <string name="product_page_name">Product</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
