--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="food_btn">Food</string>
     <string name="books_btn">Books</string>
     <string name="decorative_btn">Decorative</string>
+    <string name="category_item_name">Item Name</string>
+    <string name="category_item_price">RM 0.00</string>
     <string-array name="product_filter_group">
         <item>Latest release</item>
         <item>Most sold</item>
