--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,11 @@
         <item>November</item>
         <item>December</item>
     </string-array>
+    <string-array name="year_group">
+        <item>2023</item>
+        <item>2024</item>
+        <item>2025</item>
+    </string-array>
     <string name="title_activity_spending_chart">SpendingChartActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -95,10 +100,10 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
-    <string name="highest_spending_textview">Your Highest Spending This Month</string>
-    <string name="highest_spending_amt_textview">none (dummy)</string>
+    <string name="highest_spending_textview">Your Highest Spending Day This Month</string>
+    <string name="highest_spending_amt_textview">Loading...</string>
     <string name="total_spending_textview">Your Total Spending This Month</string>
-    <string name="total_spending_amt_textview">none(dummy)</string>
+    <string name="total_spending_amt_textview">Loading...</string>
     <string name="set_spending_limit_textview">Set Spending Limit</string>
     <string name="set_spending_limit_text">1000.00</string>
     <string name="spending_limit_reach_cb_text">Stop payments if spending limit is reached.</string>
@@ -213,5 +218,6 @@
     <string name="seller_order_item_address_sample">Kimberly 234, Mask Street, California, 4000 New Order</string>
     <string name="address">Address</string>
     <string name="mark_as_done">Mark As Done</string>
+    <string name="refresh_button_text">Refresh</string>
 
 </resources>
