feat: add validation to registration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,6 +175,7 @@
     <string name="phone_number">Phone Number</string>
     <string name="phone_number_sample">+60111111111</string>
     <string name="birth_date">Date of Birth</string>
+    <string name="birth_date_sample">DD/MM/YYYY</string>
     <string name="upload_file">Upload File</string>
 
     <!-- strings related to buyer profile -->
@@ -219,5 +220,15 @@
     <string name="address">Address</string>
     <string name="mark_as_done">Mark As Done</string>
     <string name="refresh_button_text">Refresh</string>
+
+    <!-- strings related to error handling -->
+    <string name="empty_username">Username can\'t be empty</string>
+    <string name="taken_username">This username is taken</string>
+    <string name="empty_email">Email can\'t be empty</string>
+    <string name="invalid_email">Please enter a valid email address</string>
+    <string name="empty_password">Please enter a password</string>
+    <string name="taken_password">This password is taken</string>
+    <string name="not_same_password">Passwords do not match</string>
+    <string name="underage">Only 18 and above users are allowed to register</string>
 
 </resources>
