feat: add uploading to database for buyer and seller registration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,7 +175,7 @@
     <string name="phone_number">Phone Number</string>
     <string name="phone_number_sample">+60111111111</string>
     <string name="birth_date">Date of Birth</string>
-    <string name="birth_date_sample">DD/MM/YYYY</string>
+    <string name="birth_date_sample">DD-MM-YYYY</string>
     <string name="bank_name">Bank Name</string>
     <string name="card_no">Card Number</string>
     <string name="upload_file">Upload File</string>
@@ -246,5 +246,6 @@
     <string name="empty_bank">Please enter a bank name</string>
     <string name="empty_card">Please enter your card number</string>
     <string name="invalid_card_no">Please enter a valid card number</string>
+    <string name="empty_address">Please enter an address</string>
 
 </resources>
