--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,12 +37,10 @@
     <string name="seller_name">Seller Name</string>
     <string name="reviewer_name">Reviewer Name</string>
     <string name="review_desc">This is the review description</string>
-    <string name="related_products_name_1">related product 1</string>
-    <string name="related_products_price_1">RM 0.00</string>
-    <string name="related_products_name_2">related product 2</string>
-    <string name="related_products_price_2">RM 0.00</string>
-    <string name="related_products_name_3">related product 3</string>
-    <string name="related_products_price_3">RM 0.00</string>
+    <string name="quantity_amt">Quantity: </string>
+    <string name="quantity_number">1</string>
+    <string name="plus_sign_btn">+</string>
+    <string name="minus_sign_btn">-</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
